@@ -4,8 +4,11 @@ import jakarta.servlet.http.HttpServletRequest;
 import java.sql.Timestamp;
 import java.util.ArrayList;
 import java.util.HashMap;
+import java.util.LinkedHashSet;
 import java.util.List;
 import java.util.Map;
+import java.util.Set;
+import java.util.stream.Collectors;
 import org.openelisglobal.biorepository.service.BioSampleService;
 import org.openelisglobal.biorepository.service.BiorepositoryQCInspectionService;
 import org.openelisglobal.biorepository.valueholder.BioSample;
@@ -36,6 +39,9 @@ import org.springframework.web.bind.annotation.RestController;
 @RequestMapping(value = "/rest/biorepository/qc-inspection")
 public class BiorepositoryQCInspectionRestController extends BaseRestController {
 
+    private static final int MAX_BOXES_PER_ROUND = 200;
+    private static final int MAX_SAMPLES_PER_BOX = 50;
+
     @Autowired
     private BiorepositoryQCInspectionService qcInspectionService;
 
@@ -52,18 +58,43 @@ public class BiorepositoryQCInspectionRestController extends BaseRestController 
     @GetMapping(value = "/samples", produces = MediaType.APPLICATION_JSON_VALUE)
     @Transactional(readOnly = true)
     public ResponseEntity<List<Map<String, Object>>> getStoredSamplesForQC() {
-        List<BioSample> storedSamples = bioSampleService.getAll().stream()
-                .filter(bs -> WorkflowStatus.STORED.equals(bs.getWorkflowStatus())).toList();
+        List<BioSample> storedSamples = bioSampleService.getAllWithRelationships(50000).stream()
+                .filter(sample -> sample != null && sample.getWorkflowStatus() == WorkflowStatus.STORED)
+                .collect(Collectors.toList());
+
+        List<Integer> bioSampleIds = new ArrayList<>();
+        List<String> sampleItemIds = new ArrayList<>();
+        for (BioSample bioSample : storedSamples) {
+            if (bioSample == null || bioSample.getId() == null) {
+                continue;
+            }
+            bioSampleIds.add(bioSample.getId());
+
+            SampleItem sampleItem = bioSample.getSampleItem();
+            if (sampleItem != null && sampleItem.getId() != null && !sampleItem.getId().trim().isEmpty()) {
+                sampleItemIds.add(sampleItem.getId().trim());
+            }
+        }
+
+        Map<String, Map<String, Object>> locationsBySampleItemId = storageService.getSampleItemLocations(sampleItemIds);
+        Map<Integer, BiorepositoryQCInspection> latestInspectionByBioSampleId = qcInspectionService
+                .getMostRecentByBioSampleIds(bioSampleIds);
 
         List<Map<String, Object>> result = new ArrayList<>();
 
         for (BioSample bioSample : storedSamples) {
+            if (bioSample == null || bioSample.getId() == null) {
+                continue;
+            }
+
             Map<String, Object> sampleData = new HashMap<>();
 
             // BioSample basic info
             sampleData.put("bioSampleId", bioSample.getId());
-            sampleData.put("workflowStatus", bioSample.getWorkflowStatus().name());
-            sampleData.put("biosafetyLevel", bioSample.getBiosafetyLevel().name());
+            sampleData.put("workflowStatus",
+                    bioSample.getWorkflowStatus() != null ? bioSample.getWorkflowStatus().name() : null);
+            sampleData.put("biosafetyLevel",
+                    bioSample.getBiosafetyLevel() != null ? bioSample.getBiosafetyLevel().name() : null);
 
             if (bioSample.getProjectId() != null) {
                 sampleData.put("projectId", bioSample.getProjectId());
@@ -71,32 +102,39 @@ public class BiorepositoryQCInspectionRestController extends BaseRestController 
 
             // SampleItem info
             SampleItem sampleItem = bioSample.getSampleItem();
-            if (sampleItem != null) {
-                sampleData.put("sampleItemId", sampleItem.getId());
-                sampleData.put("externalId", sampleItem.getExternalId());
-
-                if (sampleItem.getTypeOfSample() != null) {
-                    sampleData.put("sampleType", sampleItem.getTypeOfSample().getDescription());
-                    sampleData.put("sampleTypeId", sampleItem.getTypeOfSample().getId());
-                }
-
-                if (sampleItem.getSample() != null) {
-                    sampleData.put("accessionNumber", sampleItem.getSample().getAccessionNumber());
-                }
-
-                // Get storage location
-                Map<String, Object> location = storageService.getSampleItemLocation(sampleItem.getId().toString());
-                if (location != null && !location.isEmpty()) {
-                    sampleData.put("storageLocation", location);
-                    // Extract hierarchical path for display
-                    if (location.containsKey("hierarchicalPath")) {
-                        sampleData.put("locationPath", location.get("hierarchicalPath"));
-                    }
-                }
+            if (sampleItem == null || sampleItem.getId() == null || sampleItem.getId().trim().isEmpty()) {
+                continue;
             }
 
-            // Check if sample has existing QC inspection
-            BiorepositoryQCInspection mostRecent = qcInspectionService.getMostRecentByBioSampleId(bioSample.getId());
+            sampleData.put("sampleItemId", sampleItem.getId());
+            sampleData.put("externalId", sampleItem.getExternalId());
+
+            if (sampleItem.getTypeOfSample() != null) {
+                sampleData.put("sampleType", sampleItem.getTypeOfSample().getDescription());
+                sampleData.put("sampleTypeId", sampleItem.getTypeOfSample().getId());
+            }
+
+            if (sampleItem.getSample() != null) {
+                sampleData.put("accessionNumber", sampleItem.getSample().getAccessionNumber());
+            }
+
+            // Use pre-fetched storage location map to avoid per-sample query
+            String sampleItemId = sampleItem.getId().trim();
+            Map<String, Object> location = locationsBySampleItemId.get(sampleItemId);
+            if (location == null || location.isEmpty()
+                    || !Boolean.TRUE.equals(location.get("deviceBiorepositoryStorage"))
+                    || !"freezer".equalsIgnoreCase(String.valueOf(location.get("deviceType")))) {
+                continue;
+            }
+
+            sampleData.put("storageLocation", location);
+            // Extract hierarchical path for display
+            if (location.containsKey("hierarchicalPath")) {
+                sampleData.put("locationPath", location.get("hierarchicalPath"));
+            }
+
+            // Use pre-fetched latest QC map to avoid per-sample query
+            BiorepositoryQCInspection mostRecent = latestInspectionByBioSampleId.get(bioSample.getId());
             if (mostRecent != null) {
                 sampleData.put("lastQCInspection", mapQCInspection(mostRecent));
             }
@@ -120,9 +158,22 @@ public class BiorepositoryQCInspectionRestController extends BaseRestController 
 
         try {
             // Validate required fields
+            if (request == null) {
+                return ResponseEntity.badRequest().body(Map.of("error", "Request payload is required"));
+            }
             if (request.getBioSampleIds() == null || request.getBioSampleIds().isEmpty()) {
                 return ResponseEntity.badRequest().body(Map.of("error", "At least one biosample ID is required"));
             }
+            if (request.getBioSampleIds().stream().anyMatch(id -> id == null || id <= 0)) {
+                return ResponseEntity.badRequest().body(Map.of("error", "BioSample IDs must be positive integers"));
+            }
+
+            Set<Integer> uniqueBioSampleIds = new LinkedHashSet<>(request.getBioSampleIds());
+            if (uniqueBioSampleIds.size() != request.getBioSampleIds().size()) {
+                return ResponseEntity.badRequest()
+                        .body(Map.of("error", "Duplicate biosample IDs are not allowed in bulk QC request"));
+            }
+
             if (request.getInspectorName() == null || request.getInspectorName().trim().isEmpty()) {
                 return ResponseEntity.badRequest().body(Map.of("error", "Inspector name is required"));
             }
@@ -132,7 +183,8 @@ public class BiorepositoryQCInspectionRestController extends BaseRestController 
                     : new Timestamp(System.currentTimeMillis());
 
             List<BiorepositoryQCInspection> inspections = qcInspectionService.createBulkInspections(
-                    request.getBioSampleIds(), request.getInspectorName(), inspectionDate, request.isSamplePresent(),
+                    new ArrayList<>(uniqueBioSampleIds), request.getInspectorName(), inspectionDate,
+                    request.isSamplePresent(),
                     request.isLabelIntegrity(), request.isContainerIntegrity(), request.isVolumeAppearanceAcceptable(),
                     request.isCorrectPosition(), request.getDiscrepancyType(), request.getCorrectiveAction(),
                     request.getRemarks(), request.getQcBatchId(), request.getExpectedCoordinateSnapshot(), sysUserId);
@@ -164,18 +216,47 @@ public class BiorepositoryQCInspectionRestController extends BaseRestController 
             return ResponseEntity.status(401).body(Map.of("error", "User session not found. Please log in again."));
         }
 
+        if (request != null && (request.getBoxesPerRound() < 1 || request.getBoxesPerRound() > MAX_BOXES_PER_ROUND)) {
+            return ResponseEntity.badRequest().body(Map.of("error", "boxesPerRound must be between 1 and "
+                    + MAX_BOXES_PER_ROUND));
+        }
+        if (request != null
+                && (request.getSamplesPerBox() < 1 || request.getSamplesPerBox() > MAX_SAMPLES_PER_BOX)) {
+            return ResponseEntity.badRequest().body(Map.of("error", "samplesPerBox must be between 1 and "
+                    + MAX_SAMPLES_PER_BOX));
+        }
+
         int boxesPerRound = request != null ? request.getBoxesPerRound() : 10;
         int samplesPerBox = request != null ? request.getSamplesPerBox() : 3;
         Long seed = request != null ? request.getSeed() : null;
 
+        Map<String, String> locationFilters = new HashMap<>();
+        if (request != null) {
+            putIfNotBlank(locationFilters, "freezer", request.getFreezer());
+            putIfNotBlank(locationFilters, "shelf", request.getShelf());
+            putIfNotBlank(locationFilters, "rack", request.getRack());
+            putIfNotBlank(locationFilters, "box", request.getBox());
+        }
+
         try {
             Map<String, Object> generated = qcInspectionService.generateRandomQCRound(boxesPerRound, samplesPerBox,
-                    seed, sysUserId);
+                    seed, sysUserId, locationFilters);
             return ResponseEntity.ok(generated);
+        } catch (IllegalArgumentException e) {
+            return ResponseEntity.badRequest().body(Map.of("error", e.getMessage()));
         } catch (Exception e) {
             return ResponseEntity.internalServerError()
                     .body(Map.of("error", "Failed to generate QC round: " + e.getMessage()));
         }
+    }
+
+    /**
+     * Get storage location overview for QC planning (room-level summary).
+     */
+    @GetMapping(value = "/location-overview", produces = MediaType.APPLICATION_JSON_VALUE)
+    @Transactional(readOnly = true)
+    public ResponseEntity<Map<String, Object>> getLocationOverview() {
+        return ResponseEntity.ok(qcInspectionService.getLocationOverview());
     }
 
     /**
@@ -246,10 +327,10 @@ public class BiorepositoryQCInspectionRestController extends BaseRestController 
     private Map<String, Object> mapQCInspection(BiorepositoryQCInspection inspection) {
         Map<String, Object> map = new HashMap<>();
         map.put("id", inspection.getId());
-        map.put("bioSampleId", inspection.getBioSample().getId());
+        map.put("bioSampleId", inspection.getBioSample() != null ? inspection.getBioSample().getId() : null);
         map.put("inspectorName", inspection.getInspectorName());
-        map.put("inspectionDate", inspection.getInspectionDate().toString());
-        map.put("qcResult", inspection.getQcResult().name());
+        map.put("inspectionDate", inspection.getInspectionDate() != null ? inspection.getInspectionDate().toString() : null);
+        map.put("qcResult", inspection.getQcResult() != null ? inspection.getQcResult().name() : null);
 
         // Checklist items
         map.put("samplePresent", inspection.isSamplePresent());
@@ -276,6 +357,12 @@ public class BiorepositoryQCInspectionRestController extends BaseRestController 
         }
 
         return map;
+    }
+
+    private void putIfNotBlank(Map<String, String> target, String key, String value) {
+        if (value != null && !value.trim().isEmpty()) {
+            target.put(key, value.trim());
+        }
     }
 
     // ========== Request DTOs ==========
@@ -405,6 +492,10 @@ public class BiorepositoryQCInspectionRestController extends BaseRestController 
         private int boxesPerRound = 10;
         private int samplesPerBox = 3;
         private Long seed;
+        private String freezer;
+        private String shelf;
+        private String rack;
+        private String box;
 
         public int getBoxesPerRound() {
             return boxesPerRound;
@@ -428,6 +519,38 @@ public class BiorepositoryQCInspectionRestController extends BaseRestController 
 
         public void setSeed(Long seed) {
             this.seed = seed;
+        }
+
+        public String getFreezer() {
+            return freezer;
+        }
+
+        public void setFreezer(String freezer) {
+            this.freezer = freezer;
+        }
+
+        public String getShelf() {
+            return shelf;
+        }
+
+        public void setShelf(String shelf) {
+            this.shelf = shelf;
+        }
+
+        public String getRack() {
+            return rack;
+        }
+
+        public void setRack(String rack) {
+            this.rack = rack;
+        }
+
+        public String getBox() {
+            return box;
+        }
+
+        public void setBox(String box) {
+            this.box = box;
         }
     }
 
